--- a/app/src/main/res/layout/fragment_choose_workout.xml
+++ b/app/src/main/res/layout/fragment_choose_workout.xml
@@ -97,6 +97,7 @@
                 android:id="@+id/btnSave"
                 android:layout_width="120dp"
                 android:layout_height="59dp"
+                android:clickable="true"
                 android:elevation="15dp"
                 android:text="Save"
                 android:textSize="20sp"
